--- a/src/componentes/header/_header.scss
+++ b/src/componentes/header/_header.scss
@@ -33,6 +33,7 @@
             text-decoration: none;
             font-size: 1rem;
             letter-spacing: 10px;
+            z-index: 9;
             &:hover {
                 @extend .hero, .glitch, .layers;
                 font-size: 1rem !important;
