mouse follow added

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,3 +38,4 @@ $clr-bg: rgb(48, 32, 43);
 @import "../componentes/pages/about/about";
 @import "../componentes/pages/work/work";
 @import "../componentes/smoke/smoke";
+@import "../componentes/mouse-pointer/mouse-pointer"
