--- a/src/componentes/pages/home/_home.scss
+++ b/src/componentes/pages/home/_home.scss
@@ -8,6 +8,10 @@
     color: white;
     gap: 1rem;
     flex-direction: column;
+    background-image: url(../../public/images/fondo.gif);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     .container-name {
         display: flex;
         justify-content: center;
